# limn

./: .gitignore  LICENSE  README.md  pyproject.toml  read_tag.sh  rfid.py  touchprobe.py
ext/: limn.py  shell_output.py
klipper/: buzzer.cfg  crownest.cfg  leds.cfg  limn.cfg  printer.cfg
micropython/: lrt_dock_mcu.py  lrt_fsr_array.py  lrt_resistive_touch.py  uart_ota.py
notebooks/: act-5-z-calib.ipynb  act1-grids.ipynb  act3-synthetic-calib.ipynb
slicer/: PrusaSlicer_config_bundle.ini  config.ini  post-process.py
