[project]
name = "limn-v1"
version = "0.1.0"
description = "Extras for Limn Pen Plotter."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.12.0",
    "requests>=2.32.5",
    "typer>=0.21.1",
    "adafruit-blinka>=9.0.4",
    "adafruit-circuitpython-pn532>=2.4.8",
    "pyserial>=3.5",
]
